# pydantic-doc-zh

./: README.md  edgeone.json  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs-update.yml
2.12/: 404.html  index.html
2.12/contributing/: index.html
2.12/help_with_pydantic/: index.html
2.12/install/: index.html
2.12/migration/: index.html
2.12/search/: search_index.json
2.12/theme/: main.html
2.12/version-policy/: index.html
2.12/why/: index.html
docs/: contributing.md  help_with_pydantic.md  index.md  index_en.md  install.md  migration.md  version-policy.md  why.md
docs/concepts/: alias.md  config.md  conversion_table.md  dataclasses.md  experimental.md  fields.md  forward_annotations.md  json.md  json_schema.md  models.md  performance.md  pydantic_settings.md  serialization.md  strict_mode.md  type_adapter.md  types.md  unions.md  validation_decorator.md  validators.md
docs/errors/: errors.md  usage_errors.md  validation_errors.md
docs/examples/: custom_validators.md  files.md  orms.md  queues.md  requests.md
docs/integrations/: aws_lambda.md  datamodel_code_generator.md  devtools.md  documentation.md  hypothesis.md  linting.md  llms.md  logfire.md  mypy.md  pycharm.md  pyrefly.md  rich.md  visual_studio_code.md
docs/internals/: architecture.md  resolving_annotations.md
docs/plugins/: main.py
docs/theme/: main.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/contributing/: index.html
latest/help_with_pydantic/: index.html
pydantic-settings/: README.md  index.md  index_en.md
(+156 files in other folders)
