[project]
name = "pydantic-doc-zh"
version = "0.1.0"
description = "Pydantic 中文文档"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autoflake>=2.3.1",
    "build>=1.3.0",
    "mike>=2.1.3",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-llmstxt>=0.4.0",
    "mkdocs-material>=9.6.21",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings-python>=1.18.2",
    "pydantic>=2.12.0",
    "pydantic-core>=2.41.1",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pyupgrade>=3.21.0",
    "tomli>=2.3.0",
]
